--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 anyio==3.6.1
 asgiref==3.5.2
+asyncpg==0.25.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
@@ -15,6 +16,8 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 orjson==3.7.6
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pydantic==1.9.1
 python-dotenv==0.20.0
 python-multipart==0.0.5
