feature/add_authentications_with_google
- Add oaut setup for google authentication
- Update authentication routes
- Update CRUD
- Update schemes
- Update requirements
- Update utils

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,11 @@
+### VS Code ###
+.vscode/
+.vscode/*
+.vscode/settings.json
+
 ### Python ###
 **/__pycache__/
-/pycache/*
+/__pycache__/*
 **/*.pyc
 
 ### Git ###
