--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 anyio==3.6.1
 asgiref==3.5.2
 asyncpg==0.25.0
+Authlib==1.0.1
 bcrypt==3.2.2
 certifi==2022.6.15
 cffi==1.15.1
@@ -13,8 +14,10 @@ ecdsa==0.17.0
 email-validator==1.2.1
 fastapi==0.78.0
 greenlet==1.1.2
-h11==0.13.0
+h11==0.12.0
+httpcore==0.15.0
 httptools==0.4.0
+httpx==0.23.0
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -31,6 +34,7 @@ python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==6.0
 requests==2.28.1
+rfc3986==1.5.0
 rsa==4.8
 six==1.16.0
 sniffio==1.2.0
