--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 anyio==3.6.1
 asgiref==3.5.2
+async-generator==1.10
 asyncpg==0.25.0
+attrs==21.4.0
 Authlib==1.0.1
 bcrypt==3.2.2
 certifi==2022.6.15
@@ -19,16 +21,24 @@ httpcore==0.15.0
 httptools==0.4.0
 httpx==0.23.0
 idna==3.3
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 orjson==3.7.6
+outcome==1.2.0
+packaging==21.3
 passlib==1.7.4
+pluggy==1.0.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+py==1.11.0
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.1
+pyparsing==3.0.9
+pytest==7.1.2
+pytest-asyncio==0.19.0
 python-dotenv==0.20.0
 python-jose==3.3.0
 python-multipart==0.0.5
@@ -38,8 +48,11 @@ rfc3986==1.5.0
 rsa==4.8
 six==1.16.0
 sniffio==1.2.0
+sortedcontainers==2.4.0
 SQLAlchemy==1.4.39
 starlette==0.19.1
+tomli==2.0.1
+trio==0.21.0
 typing_extensions==4.3.0
 ujson==5.4.0
 urllib3==1.26.9
