--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,12 +8,13 @@ services:
       - 8000:8000
     depends_on:
       - postgres
+      - test
     restart: always
     networks:
       - postgres
 
-
   postgres:
+    container_name: main-db-postgres
     image: postgres
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
@@ -28,11 +29,23 @@ services:
     networks:
       - postgres
 
+  test:
+    container_name: test-db-postgres
+    image: postgres
+    environment:
+      POSTGRES_USER: ${TEST_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${TEST_POSTGRES_PASSWORD}
+      POSTGRES_DB: ${TEST_POSTGRES_DB}
+      POSTGRES_HOST: ${TEST_POSTGRES_HOST}
+    ports:
+      - "5433:5433"
+    networks:
+      - postgres
+    restart: always
 
 networks:
   postgres:
     driver: bridge
-
 
 volumes:
     postgres:
