feature/change_branch

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,7 +3,7 @@ name: Deploy to Amazon ECS
 on:
   push:
     branches:
-      - "main"
+      - "feature/add_github_actions"
 
 env:
   AWS_REGION: us-east-1
