fixbug/fix_ecs_task_definition

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -53,6 +53,8 @@ jobs:
       id: download-td
       run: |
         aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION_NAME }} > ${{ env.ECS_TASK_DEFINITION }}
+        sed "2d" td.json -i
+        sed "$ d" td.json -i
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
