fixbug/fix_ecs_task_definition#3

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -6,14 +6,14 @@ on:
       - "feature/add_github_actions"
 
 env:
-  IMAGE_TAG: latest
   AWS_REGION: us-east-1
   ECR_REPOSITORY: quiz-api
-  ECS_SERVICE: api-service
-  ECS_CLUSTER: api-clister
-  ECS_TASK_DEFINITION_NAME: api-task:1
-  ECS_TASK_DEFINITION: api-task-definition.json
   CONTAINER_NAME: api-task
+  IMAGE_TAG: latest
+  ECS_SERVICE: api-service-ec2
+  ECS_CLUSTER: api-cluster-ec2
+  ECS_TASK_DEFINITION_NAME: api-task
+  ECS_TASK_DEFINITION: api-task-definition.json
 
 permissions:
   contents: read
