--- a/requirements.txt
+++ b/requirements.txt
@@ -40,16 +40,19 @@ pyparsing==3.0.9
 pytest==7.1.2
 pytest-asyncio==0.19.0
 python-dotenv==0.20.0
+python-http-client==3.3.7
 python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==6.0
 requests==2.28.1
 rfc3986==1.5.0
 rsa==4.8
+sendgrid==6.9.7
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 SQLAlchemy==1.4.39
+starkbank-ecdsa==2.0.3
 starlette==0.19.1
 tomli==2.0.1
 trio==0.21.0
